<resources>
    <string name="app_name">Trackify</string>
    <!-- Test app id <string name="facebook_app_id">1862168067399874</string>  -->
    <string name="facebook_app_id">1769879749962040</string>
    <!-- Test app protocol scheme <string name="fb_login_protocol_scheme">fb1862168067399874</string> -->
    <string name="fb_login_protocol_scheme">fb1769879749962040</string>
    <string name="welcome_text">Welcome to Trackify!</string>
    <string name="app_description_text">Trackify is a location sharing application on top of your facebook network! Log in with your account to continue!</string>
    <string name="hi">Hi</string>
    <string name="user_help_text">Select one of your friends below!</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="enable_location_sharing">Enable location sharing</string>
    <string name="settings">Settings</string>
    <string name="location_sharing_interval">Location sharing interval</string>
    <string name="share_now">Share now</string>
    <string name="preference_file_key">com.vsoft.trackify.PREFERENCE_FILE_KEY</string>
    <string name="toggle_sharing">com.vsoft.trackify.TOGGLE_SHARING</string>
    <string name="ok">OK</string>
    <string name="interval_5_sec">5 sec</string>
    <string name="interval_1_min">1 min</string>
    <string name="interval_10_min">10 min</string>
    <string name="share_interval">com.vsoft.trackify.SHARE_INTERVAL</string>
</resources>
